Mobile view Layout issues resolved

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,52 @@
 body {
     background-color: #0d0d11;
 }
+
+
+@media (max-width: 575.98px) { 
+    .wf-section a img {
+        height: 27px;
+    }
+    section h1 {
+        width: 100%;
+      
+        font-size: 55px;
+    }
+    .show_skew-on_load.display-1 {
+    
+        font-size: 2rem;
+    }
+    .conversation {
+        margin-top: 629px;
+        margin-bottom: 10px;
+    }
+    .carousel-caption1 {
+        color: white;
+        margin-left: 37px;
+    }
+    .display-11 {
+        color: white;
+        font-size: 4rem;
+        font-weight: 700;
+    }
+    .form05_h5 {
+
+        font-size: 3rem;
+  
+    }
+ }
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) { 
+
+ }
+
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {  
+
+}
+
+/* // Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+
+  }
